# ShallowHost

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  components.json  doctor.config.ts  eslint.config.js  fallow.toml  justfile  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: bump-version.yml  react-doctor.yml  release.yml
assets/: THEME.md
src/: main.tsx
src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/cpp/: CMakeLists.txt
src-tauri/cpp/src/: ffi.cpp  host.cpp  host.h
src-tauri/icons/: icon.icns
src-tauri/src/: ffi.rs  lib.rs  main.rs
src-tauri/src/commands/: audio.rs  chain.rs  mod.rs  params.rs  scanner.rs  stubs.rs  system.rs  window.rs
src-tauri/src/engine/: audio_io.rs  chain.rs  mod.rs
src-tauri/src/engine/audio/: engine.rs  mod.rs  stream.rs  types.rs
src-tauri/src/scanner/: vst3.rs
src-tauri/src/state/: store.rs
src/app/: index.ts  router.tsx  styles.css
src/pages/home/ui/: AudioConfigCard.tsx  ChainCardActions.tsx  ChainParamsButton.tsx  HomePage.tsx  SortableChainCard.tsx
src/pages/plugins/: index.ts
src/pages/plugins/ui/: PluginsPage.tsx
src/pages/settings/ui/: SettingsPage.tsx
src/shared/config/: i18n.ts
src/shared/config/locales/: en.json  ru.json
src/shared/lib/: tauri-storage.ts  updater.ts
src/shared/model/: audio-config-store.ts  chain-store.ts  language-store.ts  plugin-store.ts  theme-store.ts  tray-store.ts  ui-store.ts  update-store.ts
src/shared/ui/: badge.tsx  button-variants.ts  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  scroll-area.tsx  select.tsx  slider.tsx  sonner.tsx  switch.tsx  tooltip.tsx
src/widgets/sidebar/ui/: Sidebar.tsx
src/widgets/titlebar/: index.ts
src/widgets/titlebar/ui/: Titlebar.tsx
