[package]
name = "shallow-host"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "shallow_host_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"

[profile.release]
opt-level = 3              # Maximum optimizations (default, but explicit is good)
lto = "fat"                # Full Link-Time Optimization (most aggressive)
codegen-units = 1          # Maximum optimization opportunities (slowest compile)
panic = "abort"            # Remove unwinding overhead (smaller + faster)
strip = "symbols"          # Strip symbols (smaller binary; use "debuginfo" or true if needed)
debug = false              # No debug info
overflow-checks = false    # Already default in release
